			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2594 2004/04/18 15:16:58 suz Exp $

<200404>
2004-04-18  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/kame/pim6sd/{vif.c, mld6.[ch]}, kame/sys/netinet6/in6.h:
	All MLDv2-capable routers multicast address has been officially assigned
	as "ff02::16"

2004-04-18  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c (explore_numeric): re-enabled
	the special case for AF_INET (use inet_aton instead of inet_pton)
	as required in RFC3493.  getaddrinfo now accepts the "classful"
	form of IPv4 addresses.

2004-04-17  kjc@csl.sony.co.jp
	* kame/sys/altq/
	build altq under freebsd5-current.
	submitted by Max Laier <max@love2party.net>

2004-04-16  Shin'ichi Fujisawa  <fujisawa@kame.net>
	* freebsd4/sys/netinet/ip_input.c:
	* kame/sys/netinet6/natpt_trans.c:
	- Fixed a compile error when you enable a NATPT/NATPT-NAT kernel
	  option.

2004-04-15  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/netinet/icmp6.h: ICMPv6 Type number of MLDv2-Listener-
	REPORT has been changed to the official one (=143)! 

2004-04-13  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c (getaddrinfo): clean-up:
	removed the definition of the AI_V4MAPPED and AI_ALL flags (when
	they are defined), and removed incomplete support for the flags.

2004-04-13  itojun
	* kame/kame/libinet6/getaddrinfo.c (getaddrinfo): added support
	for the AI_NUMERICSERV flag.

2004-04-10  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c (reorder): made sure to call
	set_source() to set the source address information for each
	candidate of destination.  This was lost by accident in April
	2003, and the destination address ordering has been incomplete
	since then.

Thu Apr  8 14:41:22 JST 2004 sakane@kame.net
	* kame/kame/racoon/proposal.c:
	fixed the EXACT mode to compare the proposals.  the lifetime in phase2
	did not work in the case of EXACT mode.
